[project]
name = "agents-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "asyncpg>=0.30.0",
    "devtools>=0.12.2",
    "fastapi>=0.115.12",
    "gradio>=5.33.2",
    "httpx>=0.28.1",
    "logfire>=3.18.0",
    "pydantic-ai[examples]>=0.2.16",
    "python-dotenv>=1.1.0",
]
